<resources>
    <string name="app_name">PersonasMaterialDiplomado</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="crear">Crear Personas</string>

    <string name="mensaje_guardado">Persona Guardada Exitosamente!</string>
    <string name="cedula">Cédula</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="informacion">INFORMACIÓN</string>
    <string name="sexo">Sexo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="titulo_eliminar_mensaje">Eliminar Persona</string>
    <string name="eliminar_mensaje">¿Está seguro que desea elminar a esta persona?</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje">No</string>
    <string name="no_vacio_error">Este campo no puede estar vacío</string>
    <string name="persona_existente_error">Ya existe una persona ingresada con esta cédula</string>
    <string name="Modificar">Modificar</string>
    <string name="mensaje_seleccion">Seleccione una Foto</string>
    <string name="mensaje_exito_modificar">modificado Exitosamente</string>
    <string name="id_banner">ca-app-pub-8050534411662869/7515545759</string>
    <string name="inter">ca-app-pub-8050534411662869/1698088773</string>
    <string name="Banner_video">ca-app-pub-8050534411662869/2056169665</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Login">Login</string>
    <string name="email">E-mail</string>
    <string name="Contraseña">Contraseña</string>
    <string name="login">Log In</string>
    <string name="Crear_Cuenta">Crear Cuenta</string>
    <string name="mensaje_cuenta_creada_exitosamente">cuenta creada exitosamente</string>
    <string name="persona">Persona</string>
    <string name="action_salir">Salir</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
</resources>
